src/compiletest/lcell-15.stderr
error[E0277]: `Rc<i32>` cannot be sent between threads safely
  --> $DIR/lcell-15.rs:12:15
   |
12 |             s.spawn(move |_| assert_eq!(100, **owner.ro(&cell))).join().unwrap(); // Compile fail
   |               ^^^^^ ------------------------------------------- within this `[closure@$DIR/src/compiletest/lcell-15.rs:12:21: 12:64]`
   |               |
   |               `Rc<i32>` cannot be sent between threads safely
   |
   = help: within `[closure@$DIR/src/compiletest/lcell-15.rs:12:21: 12:64]`, the trait `Send` is not implemented for `Rc<i32>`
   = note: required because it appears within the type `UnsafeCell<Rc<i32>>`
   = note: required because it appears within the type `LCell<'_, Rc<i32>>`
   = note: required because it appears within the type `[closure@$DIR/src/compiletest/lcell-15.rs:12:21: 12:64]`
